--- a/_posts/frontend/svelte/2025-03-24-Svelte2.md
+++ b/_posts/frontend/svelte/2025-03-24-Svelte2.md
@@ -1,6 +1,6 @@
 ---
 title: Svelte Study - Day 1
-description: Let's make movie site on svelte framework.
+description: Let's learn the svelte framework.
 author: DS2Man
 date: 2025-03-24 17:00:00 +0000
 categories: [Frontend, Svelte]
@@ -137,6 +137,25 @@ _My Svelte Page_
 
 ## *Project Structure Overview*
 
+#### *Structure of svelte*
+
+The structure of a Svelte file is as follows. It consists of three main sections: `script`, `main`, and `style`, each serving the following purpose:
+
+```svelte
+<script>
+  // JavaScript section: handles the logic
+  // For example: click events, data processing, API calls, etc.
+</script>
+
+<main>
+  <!-- HTML section: defines the main content of the web page -->
+</main>
+
+<style>
+  // CSS section: defines the styles
+</style>
+```
+
 #### *Key File Descriptions*
 
 |File|Description|
@@ -145,8 +164,8 @@ _My Svelte Page_
 |**index.html**|The entry point HTML file of the application. It serves as the base page displayed <br>in the browser and contains the element where the Svelte app will be rendered.|
 |**src/main.js**|The entry point JavaScript file of the Svelte application. <br>It imports the Svelte component and mounts it to a specific DOM element in `index.html`.|
 
-```json
-# package.json
+```jsonc
+// package.json
 
 {
   "name": "svelte-javascript-vite-project",
@@ -199,7 +218,7 @@ const app = mount(App, {
 export default app
 ```
 
-```javascript
+```svelte
 // src/App.svelte
 
 <script>
@@ -251,7 +270,7 @@ export default app
 </style>
 ```
 
-```javascript
+```svelte
 // src/lib/Counter.svelte
 
 <script>
@@ -264,25 +283,6 @@ export default app
 <button onclick={increment}>
   count is {count}
 </button>
-```
-
-#### *Structure of file.svelte*
-
-The structure of a Svelte file is as follows. It consists of three main sections: `script`, `main`, and `style`, each serving the following purpose:
-
-```javascript
-<script>
-  // JavaScript section: handles the logic
-  // For example: click events, data processing, API calls, etc.
-</script>
-
-<main>
-  <!-- HTML section: defines the main content of the web page -->
-</main>
-
-<style>
-  // CSS section: defines the styles
-</style>
 ```
 
 #### *Install Svelte for VS Code*
