--- a/_posts/frontend/svelte/2025-03-25-Svelte3.md
+++ b/_posts/frontend/svelte/2025-03-25-Svelte3.md
@@ -11,62 +11,20 @@ pin: true
   
 ## *Basic and declarative rendering*
 
-#### *Understanding*
-
-I’ve covered the basic Svelte syntax, function usage, and how to apply CSS.  
-I’ll continue to add more detailed content as needed.
-- Imports the content of another.svelte
-- Declare functions
-- Svelte Class Directive
-
-Svelte provides **directive syntax** to easily handle events, classes, styles, transitions, and more, directly in your template. Here’s a simple table of the most commonly used directives:
-
-|Directive Type|Syntax Example|Description|
-|---|---|---|
-|**Class Directive**|`class:myactive={isActive}`|Adds a class when the condition is `true`|
-|**Style Directive**|`style:color={textColor}`|Dynamically applies an inline style|
-|**Event Directive**|`on:click={handleClick}`|Runs a function when an event occurs|
-|**Bind Directive**|`bind:value={inputValue}`|Two-way binding between a variable and an element|
-|**Transition Directive**|`transition:fade`|Adds transition when the element enters/leaves|
-|**In Directive**|`in:fade`|Applies animation when element appears|
-|**Out Directive**|`out:fade`|Applies animation when element disappears|
-|**Animate Directive**|`animate:flip`|Animates layout changes in lists or positions|
-|**Ref Directive**|`bind:this={element}`|References a DOM element|
-
-```svelte
-// Class Directive
-<h1 class:myactive={isActive}>Hello!</h1>
-
-// Style Directive
-<p style:color={isActive ? 'blue' : 'black'}>Text</p>
-
-// Event Directive
-<button on:click={handleClick}>Click me</button>
-
-// Bind Directive
-<input bind:value={username} />
-<p>Your name: {username}</p>
-
-// Transition Directive
-<div transition:fade>
-  I will fade in and out
-</div>
-```
-
 #### *Examples*
 
 - App.svelte
 
 ```svelte
 <script>
-  // # Imports the content of another.svelte
+  // [Learn1]Imports content from another Svelte file.
   // Imports the content of Hello.svelte using the import statement
   import Hello from './Hello.svelte'
   
   let name = "App.svelte"
   let isActive = false
 
-  // # Declare functions
+  // [Learn2]Declare functions
   // In most JS/TS projects, it is a standard practice to declare functions using const
   const change_name = () => {
     name = "DS2Man"
@@ -76,7 +34,7 @@ Svelte provides **directive syntax** to easily handle events, classes, styles, t
 
 <main>
   <!-- 
-	# Svelte Class Directive
+    [Learn3]Svelte Directive Type : Class Directive
     1. Use curly braces to insert declared variables
     2. This is an example where the class is applied conditionally based on a boolean value
   -->
@@ -85,13 +43,23 @@ Svelte provides **directive syntax** to easily handle events, classes, styles, t
   </h1>
 
   <!-- 
+    [Learn4]How to binding, One-way, Two-Way
     1. Same as above, use curly braces to insert variables (no need for quotes)
     2. This is an example of one-way data binding.
        For two-way binding, you need to use `bind:`.
     <input type="text" value={name}/>
   -->
   <input type="text" bind:value={name}/>
-  <button on:click={change_name}>
+  
+  <!-- 
+    [Learn5]Event Handling
+  -->
+  <button 
+    class="mybox"
+    style:background-color={isActive ? 'red' : 'orange'}
+    on:click={change_name}
+    on:mouseenter={()=>{name="DS2Man"}}
+    on:mouseleave={()=>{name="App.svelte"}}>
     click!
   </button>
 
@@ -127,63 +95,201 @@ Svelte provides **directive syntax** to easily handle events, classes, styles, t
 ![Click Result](/assets/img/svelte/2025-03-24-SVELTE3_1.png)
 _Click Result_
 
+#### *Learn1. Imports content from another Svelte file.*
+
+In Svelte, it is common to split your application into multiple components for better reusability and maintainability.  
+To use a component defined in another `.svelte` file, you can import it using JavaScript’s `import` statement.
+
+```svelte
+<script>
+  import Hello from './Hello.svelte';
+</script>
+
+<main>
+  <Hello />
+</main>
+```
+
+#### *Learn2. Declare functions*
+
+In JavaScript (and Svelte), there are two common ways to declare functions:
+- Function : This is the traditional way to declare a function:
+
+```svelte
+<script>
+  function greet() {
+    alert("Hello from Function Declaration");
+  }
+</script>
+
+<button on:click={greet}>Click Me</button>
+```
+
+- Arrow Function : This is a more modern and concise way to declare a function:
+
+```svelte
+<script>
+  const greet = () => {
+    alert("Hello from Arrow Function");
+  }
+</script>
+
+<button on:click={greet}>Click Me</button>
+```
+
+#### *Learn3. Svelte Directive Type*
+
+Svelte provides **directive syntax** to easily handle events, classes, styles, transitions, and more, directly in your template. Here’s a simple table of the most commonly used directives:
+
+|Directive Type|Syntax Example|Description|
+|---|---|---|
+|**Class Directive**|`class:myactive={isActive}`|Adds a class when the condition is `true`|
+|**Style Directive**|`style:color={textColor}`|Dynamically applies an inline style|
+|**Event Directive**|`on:click={handleClick}`|Runs a function when an event occurs|
+|**Bind Directive**|`bind:value={inputValue}`|Two-way binding between a variable and an element|
+|**Transition Directive**|`transition:fade`|Adds transition when the element enters/leaves|
+|**In Directive**|`in:fade`|Applies animation when element appears|
+|**Out Directive**|`out:fade`|Applies animation when element disappears|
+|**Animate Directive**|`animate:flip`|Animates layout changes in lists or positions|
+|**Ref Directive**|`bind:this={element}`|References a DOM element|
+
+```svelte
+<script>
+  import { fade } from 'svelte/transition';
+  import { flip } from 'svelte/animate';
+  let isActive = true;
+  let username = "";
+  let isVisible = true;
+  let items = [1, 2, 3];
+  let box;
   
-## *Conditional Statements and Loops*
+  function handleClick() {
+    alert('Button clicked!');
+  }
 
-#### *Understanding*
-
-Conditionals and loops in Svelte use this structure:    
-	- `#` to start    
-    - `/` to end    
-    - `:` for intermediate branches
-
-`{#if} ... {:else}` Statement
-
-```svelte
-<script>
-  let score = 85;
+  function toggleVisible() {
+    isVisible = !isVisible;
+  }
 </script>
 
-{#if score >= 90}
-  <p>Grade: A</p>
-{:else if score >= 80}
-  <p>Grade: B</p>
-{:else}
-  <p>Keep trying!</p>
+<!-- Class Directive -->
+<h1 class:myactive={isActive}>Hello!</h1>
+
+<!-- Style Directive -->
+<p style:color={isActive ? 'blue' : 'black'}>Text</p>
+
+<!-- Event Directive -->
+<button on:click={handleClick}>Click me</button>
+
+<!-- Bind Directive -->
+<input bind:value={username} placeholder="Enter your name" />
+<p>Your name: {username}</p>
+
+<!-- Transition Directive -->
+<button on:click={toggleVisible}>Toggle Box</button>
+{#if isVisible}
+  <div transition:fade>
+    I will fade in and out
+  </div>
 {/if}
+
+<!-- In Directive -->
+{#if isVisible}
+  <div in:fade>
+    I will fade in
+  </div>
+{/if}
+
+<!-- Out Directive -->
+{#if isVisible}
+  <div out:fade>
+    I will fade out
+  </div>
+{/if}
+
+<!-- Animate Directive  -->
+<ul>
+  {#each items as item (item)}
+    <li animate:flip>{item}</li>
+  {/each}
+</ul>
+
+<!-- Ref Directive -->
+<div bind:this={box}>
+  This div is referenced by "box" variable.
+</div>
+
+<style>
+  h1.myactive {
+    color: red;
+  }
+</style>
+
 ```
 
-Looping with `{#each}`
+#### *Learn4. How to binding, One-way, Two-Way*
+
+**Binding** is the process of **connecting a variable (state) to an element's property or value.**
+- One-way Binding : Data flows in one direction → from variable → to element
 
 ```svelte
 <script>
-  let fruits = ['Apple', 'Banana', 'Cherry'];
+  let name = "DS2Man";
 </script>
 
-<ul>
-  {#each fruits as fruit}
-    <li>{fruit}</li>
-  {/each}
-</ul>
+<h1>{name}</h1>
 ```
 
-Using a Key for Efficient Updates.    
-(user.id) here is a key identifier.  When items are added to the list, having a key helps render efficiently.
+- Two-way Binding : Data flows both ways → variable ↔ element    
+  When `name` changes → `<input>` value **updates** → **Variable and Element are synchronized in real-time**
 
 ```svelte
 <script>
-  let users = [
-    { id: 1, name: 'Alice' },
-    { id: 2, name: 'Bob' }
-  ];
+  let name = "";
 </script>
 
-<ul>
-  {#each users as user (user.id)}
-    <li>{user.name}</li>
-  {/each}
-</ul>
+<input bind:value={name} />
+<p>Your name is {name}</p>
 ```
+
+#### *Learn5. Event Handling*
+
+There are various types of event handling.
+
+```svelte
+<script>
+  let name = "App.svelte"
+  let isRed = false  
+
+  const toggle = () =>{
+    isRed = !isRed
+  }
+
+</script>  
+
+<main>
+  <h1>This is {name}!</h1>
+  
+  <button
+    class="mybox"
+    style:background-color={isRed ? 'red' : 'orange'}
+    on:click={toggle}
+    on:mouseenter={()=>{name="DS2Man"}}
+    on:mouseleave={()=>{name="App.svelte"}}>
+    <h1>Button</h1>
+  </button>
+</main>
+
+<style>
+  .mybox {
+    width: 500px;
+    height: 150px;
+    background-color: orange;
+  }
+</style>
+```
+
+## *Conditional Statements and Loops*
 
 #### *Examples*
 
@@ -231,7 +337,7 @@ Using a Key for Efficient Updates.
     Click! (Count: {count})
   </button>
 
-  <!-- Conditional Statements -->
+  <!-- [Learn1]Conditional Statements -->
   {#if count <= 2}
     <h1 class="myactive">Count: {count}, This is {name}!</h1>
   {:else if count > 2 && count < 5}
@@ -240,7 +346,7 @@ Using a Key for Efficient Updates.
     <h1>Count: {count}, This is DS2Man!</h1>
   {/if}
 
-  <!-- Loop Statements -->
+  <!-- [Learn2]Loop Statements -->
   <button on:click={deletefruit}>
     Delete Fruit (Length: {fruits.length})!
   </button>
@@ -269,6 +375,105 @@ Using a Key for Efficient Updates.
 </style>
 ```
 
-
 ![Click Result](/assets/img/svelte/2025-03-24-SVELTE3_2.png)
 _Click Result_
+
+#### *Learn0. Conditionals and loops in Svelte use this structure*
+
+Conditionals and loops in Svelte use this structure:    
+	- `#` to start    
+    - `/` to end    
+    - `:` for intermediate branches
+
+#### *Learn1. Conditionals Statements*
+
+`{#if} ... {:else}` Statement
+
+```svelte
+<script>
+  let score = 85;
+</script>
+
+{#if score >= 90}
+  <p>Grade: A</p>
+{:else if score >= 80}
+  <p>Grade: B</p>
+{:else}
+  <p>Keep trying!</p>
+{/if}
+```
+
+#### *Learn2. Loop Statements*
+
+Looping with `{#each}`
+
+```svelte
+<script>
+  let fruits = ['Apple', 'Banana', 'Cherry'];
+</script>
+
+<ul>
+  {#each fruits as fruit}
+    <li>{fruit}</li>
+  {/each}
+</ul>
+```
+
+Using a Key for Efficient Updates.    
+(user.id) here is a key identifier.  When items are added to the list, having a key helps render efficiently.
+
+```svelte
+<script>
+  let users = [
+    { id: 1, name: 'Alice' },
+    { id: 2, name: 'Bob' }
+  ];
+</script>
+
+<ul>
+  {#each users as user (user.id)}
+    <li>{user.name}</li>
+  {/each}
+</ul>
+```
+
+## *Event Handling*
+
+There are various types of event handling.
+
+#### *Example*
+
+- App.svelte
+
+```svelte
+<script>
+  let name = "App.svelte"
+  let isRed = false  
+
+  const toggle = () =>{
+    isRed = !isRed
+  }
+
+</script>  
+
+<main>
+  <h1>This is {name}!</h1>
+  
+  <button
+    class="mybox"
+    style:background-color={isRed ? 'red' : 'orange'}
+    on:click={toggle}
+    on:mouseenter={()=>{name="DS2Man"}}
+    on:mouseleave={()=>{name="App.svelte"}}>
+    <h1>Button</h1>
+  </button>
+</main>
+
+<style>
+  .mybox {
+    width: 500px;
+    height: 150px;
+    background-color: orange;
+  }
+</style>
+```
