--- a/_posts/frontend/svelte/2025-03-24-Svelte1.md
+++ b/_posts/frontend/svelte/2025-03-24-Svelte1.md
@@ -1,5 +1,5 @@
 ---
-title: Introduce Svelte and npm
+title: Svelte Study - Day 1
 description: Let's install Node.js and npm to use Svelte. 
 author: DS2Man
 date: 2025-03-24 11:00:00 +0000
