--- a/_posts/frontend/svelte/2025-03-25-Svelte3.md
+++ b/_posts/frontend/svelte/2025-03-25-Svelte3.md
@@ -1,5 +1,5 @@
 ---
-title: Svelte Study - Day 2
+title: Svelte Study - Day 3
 description: Let's learn the basic syntax of svelte.
 author: DS2Man
 date: 2025-03-25 11:00:00 +0000
@@ -9,7 +9,7 @@ math: true
 pin: true
 ---
   
-## *Basic and declarative rendering*
+## *Basic*
 
 #### *Examples*
 
@@ -378,7 +378,7 @@ There are various types of event handling.
 ![Click Result](/assets/img/svelte/2025-03-24-SVELTE3_2.png)
 _Click Result_
 
-#### *Learn0. Conditionals and loops in Svelte use this structure*
+#### *This structure overview*
 
 Conditionals and loops in Svelte use this structure:    
 	- `#` to start    
@@ -396,7 +396,7 @@ Conditionals and loops in Svelte use this structure:
 
 {#if score >= 90}
   <p>Grade: A</p>
-{:else if score >= 80}
+{:else if score >= 70 and score < 90}
   <p>Grade: B</p>
 {:else}
   <p>Keep trying!</p>
@@ -437,43 +437,3 @@ Using a Key for Efficient Updates.
 </ul>
 ```
 
-## *Event Handling*
-
-There are various types of event handling.
-
-#### *Example*
-
-- App.svelte
-
-```svelte
-<script>
-  let name = "App.svelte"
-  let isRed = false  
-
-  const toggle = () =>{
-    isRed = !isRed
-  }
-
-</script>  
-
-<main>
-  <h1>This is {name}!</h1>
-  
-  <button
-    class="mybox"
-    style:background-color={isRed ? 'red' : 'orange'}
-    on:click={toggle}
-    on:mouseenter={()=>{name="DS2Man"}}
-    on:mouseleave={()=>{name="App.svelte"}}>
-    <h1>Button</h1>
-  </button>
-</main>
-
-<style>
-  .mybox {
-    width: 500px;
-    height: 150px;
-    background-color: orange;
-  }
-</style>
-```
