--- a/_posts/frontend/svelte/2025-03-25-Svelte3.md
+++ b/_posts/frontend/svelte/2025-03-25-Svelte3.md
@@ -258,34 +258,34 @@ There are various types of event handling.
 
 ```svelte
 <script>
-  let name = "App.svelte"
-  let isRed = false  
+  let name = "App.svelte"
+  let isRed = false  
 
-  const toggle = () =>{
-    isRed = !isRed
-  }
+  const toggle = () =>{
+    isRed = !isRed
+  }
 
 </script>  
 
 <main>
-  <h1>This is {name}!</h1>
-  
-  <button
-    class="mybox"
-    style:background-color={isRed ? 'red' : 'orange'}
-    on:click={toggle}
-    on:mouseenter={()=>{name="DS2Man"}}
-    on:mouseleave={()=>{name="App.svelte"}}>
-    <h1>Button</h1>
-  </button>
+  <h1>This is {name}!</h1>
+
+  <button
+    class="mybox"
+    style:background-color={isRed ? 'red' : 'orange'}
+    on:click={toggle}
+    on:mouseenter={()=>{name="DS2Man"}}
+    on:mouseleave={()=>{name="App.svelte"}}>
+    <h1>Button</h1>
+  </button>
 </main>
 
 <style>
-  .mybox {
-    width: 500px;
-    height: 150px;
-    background-color: orange;
-  }
+.mybox {
+  width: 500px;
+  height: 150px;
+  background-color: orange;
+  }
 </style>
 ```
 
@@ -387,7 +387,7 @@ Conditionals and loops in Svelte use this structure:
 
 #### *Learn1. Conditionals Statements*
 
-`{#if} ... {:else}` Statement
+`{#if} ... {:else if} ... {:else} ... {/if}` Statement
 
 ```svelte
 <script>
@@ -396,7 +396,7 @@ Conditionals and loops in Svelte use this structure:
 
 {#if score >= 90}
   <p>Grade: A</p>
-{:else if score >= 70 and score < 90}
+{:else if score >= 70 && score < 90}
   <p>Grade: B</p>
 {:else}
   <p>Keep trying!</p>
@@ -405,7 +405,7 @@ Conditionals and loops in Svelte use this structure:
 
 #### *Learn2. Loop Statements*
 
-Looping with `{#each}`
+Looping with `{#each ... as ...} ... {/each}`
 
 ```svelte
 <script>
