--- a/_posts/frontend/svelte/2025-03-25-Svelte3.md
+++ b/_posts/frontend/svelte/2025-03-25-Svelte3.md
@@ -92,7 +92,7 @@ pin: true
 </style>
 ```
 
-![Click Result](/assets/img/svelte/2025-03-24-SVELTE3_1.png)
+![Click Result](/assets/img/svelte/2025-03-25-SVELTE3_1.png)
 _Click Result_
 
 #### *Learn1. Imports content from another Svelte file.*
@@ -375,10 +375,10 @@ There are various types of event handling.
 </style>
 ```
 
-![Click Result](/assets/img/svelte/2025-03-24-SVELTE3_2.png)
+![Click Result](/assets/img/svelte/2025-03-25-SVELTE3_2.png)
 _Click Result_
 
-#### *This structure overview*
+#### *The structure overview*
 
 Conditionals and loops in Svelte use this structure:    
 	- `#` to start    
