--- a/_posts/frontend/svelte/2025-03-26-Svelte4.md
+++ b/_posts/frontend/svelte/2025-03-26-Svelte4.md
@@ -12,5 +12,182 @@ pin: true
 
 ## *Component*
 
+In Svelte, a **component** is a **reusable and independent UI block**.  
+It is the basic unit used to build a user interface.    
+
+One of the **most important concepts in Svelte components** is **Props**.
+**Props** in Svelte are **a mechanism to pass data from a parent component to a child component.**  They allow parent components to **send information to child components**, making the child components **dynamic and reusable**.
+
+#### *The structure overview*
+
+In the child component (e.g., `Child.svelte`), use the `export let` syntax to declare a prop.
+
+```svelte
+<!-- Child.svelte -->
+<script>
+  export let name;
+</script>
+
+<p>Hello, {name}!</p>
+```
+
+In the parent component (e.g., `App.svelte`), pass the value to the child:
+
+```svelte
+<!-- App.svelte -->
+<script>
+  import Child from './Child.svelte';
+</script>
+
+<Child name="DS2Man" />
+```
+
+```bash
+# Result is ...
+Hello, DS2Man!
+```
+
+#### *Examples*
+
+- App.svelte
+
+```svelte
+<script>
+  // Import child components
+  // FruitName.svelte: displays fruit name only
+  // Fruit.svelte: displays fruit name and color
+  import FruitName from './Fruit_name.svelte';
+  import Fruit from './Fruit.svelte';
+
+  // Array of fruit names (used in Case 1)
+  let fruits_name = ['Apple', 'Banna', 'Cherry', 'Orange', 'Mango'];
+
+  // Array of fruit objects with id, name, and color (used in Case 2 & 3)
+  let fruits = [
+    { id: 1, name: 'Apple', color: 'red' },
+    { id: 2, name: 'Banna', color: 'yellow' },
+    { id: 3, name: 'Cherry', color: 'blue' },
+    { id: 4, name: 'Orange', color: 'orange' },
+    { id: 5, name: 'Mango', color: 'orange' }
+  ];
+</script>
+
+<main>
+  <div class="grid-container">
+    <!-- Case 1 -->
+    <div class="column">
+      <h3>Case 1</h3>
+      <ol>
+        {#each fruits_name as fruit_name}          
+          <!-- 
+            Passing the variable 'fruit_name' as a prop
+            to the FruitName component.
+            Since the variable name and prop name are the same,
+            we can use shorthand: {fruit_name}
+            In FruitName.svelte, it will be received like:
+            export let fruit_name;
+          -->
+          <!-- 
+            <FruitName fruit_name={fruit_name} /> 
+            If the attribute name and the data (variable) name are the same, 
+            you can simplify the code as shown below.
+          -->
+          <FruitName {fruit_name} />
+        {/each}
+      </ol>
+    </div>
+
+    <!-- Case 2 -->
+    <div class="column">
+      <h3>Case 2</h3>
+      <ul>
+        {#each fruits as fruit (fruit.id)}
+          <!-- 
+            Passing two props: 'fruit' and 'color'
+            to the Fruit component.
+            The parent passes data down to the child.
+            In Fruit.svelte, it will be received like:
+            export let fruit;
+            export let color;
+          -->
+          <Fruit name={fruit.name} color={fruit.color} />
+        {/each}
+      </ul>
+    </div>
+
+    <!-- Case 3 -->
+    <div class="column">
+      <h3>Case 3</h3>
+      <ul>
+        {#each fruits as { name, color } (name)}
+          <!-- 
+            Using destructuring to directly extract 'name' and 'color'
+            from the fruits array, and passing them as props.
+            This is another clean way to pass multiple props.
+          -->
+          <!-- 
+            <Fruit name={name} color={color} />
+            If the attribute name and the data (variable) name are the same, 
+            you can simplify the code as shown below.
+          -->
+          <Fruit {name} {color} />
+        {/each}
+      </ul>
+    </div>
+  </div>
+</main>
+
+<style>
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .column {
+    border: 1px solid black;
+    padding: 10px;
+  }
+</style>
+```
+
+- Fruit.svelte
+
+```svelte
+<script>
+  // Declare props (properties) to receive data from the parent component
+  // 'name' prop: will receive the fruit name
+  export let name
+  // 'color' prop: will receive the fruit color
+  export let color
+</script>
+
+<main>
+  <li style="color: {color};">{name}</li>    
+</main>
+
+<style>
+</style>
+```
+
+- Fruit_name.svelte
+
+```svelte
+<script>
+  // Declare props (properties) to receive data from the parent component
+  // 'fruit_name' prop: will receive the fruit name
+  export let fruit_name
+</script>
+
+<main>
+  <li>{fruit_name}</li>    
+</main>
+
+<style>
+</style>
+```
+
+![Result](/assets/img/svelte/2025-03-26-SVELTE4_1.png)
+_Result_
 
 ## *Store*
