--- a/_posts/frontend/svelte/2025-03-26-Svelte4.md
+++ b/_posts/frontend/svelte/2025-03-26-Svelte4.md
@@ -56,11 +56,11 @@ Hello, DS2Man!
   // Import child components
   // FruitName.svelte: displays fruit name only
   // Fruit.svelte: displays fruit name and color
-  import FruitName from './Fruit_name.svelte';
-  import Fruit from './Fruit.svelte';
+  import FruitName from './Fruit_name.svelte'
+  import Fruit from './Fruit.svelte'
 
   // Array of fruit names (used in Case 1)
-  let fruits_name = ['Apple', 'Banna', 'Cherry', 'Orange', 'Mango'];
+  let fruits_name = ['Apple', 'Banna', 'Cherry', 'Orange', 'Mango']
 
   // Array of fruit objects with id, name, and color (used in Case 2 & 3)
   let fruits = [
@@ -191,3 +191,145 @@ Hello, DS2Man!
 _Result_
 
 ## *Store*
+
+**Store** is **a state management system** provided by the Svelte framework. It allows you to store state values that can be accessed and shared globally across components.
+
+#### *Problem Examples*
+  
+The components `App.svelte`, `Parent.svelte`, and `Child.svelte` are properly using `props` and `bind` to update the `name` value in `App.svelte`. There is no major issue with this structure.    
+However, let’s consider the following scenario:  
+Suppose that in `Parent.svelte`, there is no need to use or manage the `name` value, but in `Child.svelte`, the `name` value needs to be updated.  With the current structure, you are forced to define and pass the `name` prop in `Parent.svelte`, even though it doesn't actually need it.  This leads to an unnecessary and redundant structure.  Furthermore, as the number of components grows, this issue becomes more serious and can cause increased complexity in your component hierarchy.    
+This issue can be improved by using a store.
+
+```svelte
+<!-- App.svelte -->
+<script>
+  import Parent from './Parent.svelte'
+  let name = "DS2Man"
+
+</script>
+
+<main>
+  <h1>Hello, {name}</h1>
+  <Parent bind:name={name}/>
+</main>
+
+<style>
+</style>
+```
+
+```svelte
+<!-- Parent.svelte -->
+<script>
+  import Child from './Child.svelte'
+  export let name
+  let isActive = true
+
+  const toggle = () => {
+    if (isActive === true)
+      name="Parent"
+    else
+      name="DS2Man"
+    isActive = !isActive
+  }
+</script>
+
+<main>
+  <button on:click={toggle}>Parent!</button>   
+  <Child bind:name={name} />
+</main>
+
+<style>
+</style>
+```
+
+```svelte
+<!-- Child.svelte -->
+<script>
+  export let name
+</script>
+
+<main>
+  <button on:click={() => {name="Child"}}>Child!</button>   
+</main>
+
+<style>
+</style>
+```
+
+#### *Solution : Using a Svelte Store*
+
+To solve this problem, we can use **Svelte's store** system.    
+A **store** in Svelte is a simple and reactive way to manage and share state **outside of the component hierarchy**.    
+This allows any component to **access and update shared data directly**, without having to pass it through intermediate components.   
+In our example, we created a **writable store** named `name` and used it in `App.svelte`, `Parent.svelte`, and `Child.svelte`.
+
+```javascript
+// Store.js
+
+// Import writable store from Svelte's store module
+import { writable } from 'svelte/store';
+
+// Create a writable store named 'name'
+// It holds a string value and can be updated
+export let name = writable('DS2Man');
+```
+
+```svelte
+<!-- App.svelte -->
+<script>
+  import Parent from './Parent.svelte';
+  import { name } from './Store.js'; // Importing the store 'name'
+</script>
+
+<main>
+  <!-- 
+    To read a store value, use the $ prefix.
+    Here, $name will automatically update whenever the store value changes.
+  -->
+  <h1>Hello, {$name}</h1>
+
+  <Parent />
+</main>
+
+<style>
+</style>
+
+```
+
+```svelte
+<!-- Parent.svelte -->
+<script>
+  import Child from './Child.svelte'; // Import Child component
+</script>
+
+<main>
+  <button on:click>Parent!</button>
+
+  <Child />
+</main>
+
+<style>
+</style>
+
+```
+
+```svelte
+<!-- Child.svelte -->
+<script>
+  import { name } from './Store.js'; // Import the 'name' store
+</script>
+
+<main>
+  <!-- 
+    When this button is clicked, the store value will be updated to "Child".
+    All components using $name will automatically update.
+  -->
+  <button on:click={() => { $name = "Child" }}>Child!</button>
+</main>
+
+<style>
+</style>
+
+```
+
