--- a/_posts/frontend/svelte/2025-03-25-Svelte3.md
+++ b/_posts/frontend/svelte/2025-03-25-Svelte3.md
@@ -110,6 +110,83 @@ To use a component defined in another `.svelte` file, you can import it using Ja
 </main>
 ```
 
+Note. When working with Svelte, you'll often see two different styles of `import` statements:    
+```svelte
+`import App from './App.svelte'`    
+`import { fade } from 'svelte/transition'`
+```
+
+- './App.svelte'` itself is a single component, so it is imported **without curly braces `{}`.**    
+
+```svelte
+// App.svelte
+<script>
+  export default App;
+</script>
+```
+
+- As shown in the example below, when multiple functions or features are exported, curly braces `{}` are used to selectively import only what you need.
+
+```typescript
+// index.d.ts
+declare module 'svelte/transition' {
+  export function fade(node: Element, { delay, duration, easing }?: FadeParams | undefined): TransitionConfig;
+}
+
+declare module 'svelte/store' {
+  export interface Writable<T> extends Readable<T> {
+  ...
+  ...
+}
+
+```
+
+```svelte
+<script>
+  import App from './App.svelte';
+  import { fly, fade } from 'svelte/transition';
+  import { writable } from 'svelte/store';
+  
+  export let name = writable('DS2Man');
+</script>
+
+<main>
+  <App />
+
+  <div in:fly={{y: -400, duration: 1000}} out:fade>
+       <button on:click={()=>(isEvent=false)}>X</button>
+  </div>
+  </main>
+```
+
+As i told you, the way you use the `import` statement depends on how the variables or functions are **exported**.  
+Let’s break this down with a simple example.
+
+```javascript
+// datas.js
+const activity = [
+  { id: 0, category: "News", },
+  { id: 1, category: "Sports", },
+];
+
+const language = [
+  { id: 0, category: "python", },
+  { id: 1, category: "svelte", },
+];
+
+// export { activity, language };  // Case1.
+// export { activity }             // Case2. 
+export default activity;           // Case3.
+```
+
+```svelte
+<script>
+  // import { activity, language } from "./datas.js" // Case1.
+  // import { activity } from "./datas.js"           // Case2.
+  import activity from "./datas.js"                  // Case3.
+</script>
+```
+
 #### *Learn2. Declare functions*
 
 In JavaScript (and Svelte), there are two common ways to declare functions:
