--- a/_posts/frontend/svelte/2025-03-24-Svelte2.md
+++ b/_posts/frontend/svelte/2025-03-24-Svelte2.md
@@ -84,8 +84,9 @@ The directory structure of the generated project is as follows.
 
 Once the project has been created, follow the steps below.    
 - `cd svelte-javascript-vite-project`  # Move the project directory.   
-  `npm install`   # Installs the packages related to the project.   
-  `npm run dev`   # Runs the development server.    
+- `npm install`   # Installs the packages related to the project.   
+	  `npm install --verbose`   # to see detailed information during package installation
+- `npm run dev`   # Runs the development server.    
 
 ```
 PS .. \21.MySvelte> cd svelte-javascript-vite-project
