--- a/_posts/frontend/svelte/2025-03-25-Svelte3.md
+++ b/_posts/frontend/svelte/2025-03-25-Svelte3.md
@@ -116,7 +116,7 @@ Note. When working with Svelte, you'll often see two different styles of `import
 `import { fade } from 'svelte/transition'`
 ```
 
-- './App.svelte'` itself is a single component, so it is imported **without curly braces `{}`.**    
+- `./App.svelte` itself is a single component, so it is imported **without curly braces `{}`.**    
 
 ```svelte
 // App.svelte
@@ -159,7 +159,7 @@ declare module 'svelte/store' {
   </main>
 ```
 
-As i told you, the way you use the `import` statement depends on how the variables or functions are **exported**.  
+As I told you, the way you use the `import` statement depends on how the variables or functions are **exported**.  
 Let’s break this down with a simple example.
 
 ```javascript
@@ -304,6 +304,10 @@ Svelte provides **directive syntax** to easily handle events, classes, styles, t
 
 ```
 
+![Directive Types](/assets/img/svelte/2025-03-25-SVELTE3_3.gif)
+_Directive Types_
+
+
 #### *Learn4. How to binding, One-way, Two-Way*
 
 **Binding** is the process of **connecting a variable (state) to an element's property or value.**
@@ -365,6 +369,10 @@ There are various types of event handling.
   }
 </style>
 ```
+
+![Event Handling](/assets/img/svelte/2025-03-25-SVELTE3_4.gif)
+_Event Handling_
+
 
 ## *Conditional Statements and Loops*
 
