--- a/_posts/frontend/svelte/2025-03-24-Svelte1.md
+++ b/_posts/frontend/svelte/2025-03-24-Svelte1.md
@@ -139,3 +139,212 @@ You’ll also notice that the framework we’ll be using **Svelte**is available 
 <!--
 **npm(Node Package Manager)**를 통해서 수많은 JavaScript 패키지를 설치할 수 있다. 이를 사용해서 다양한 라이브러리와 도구를 사용할 수 있다. [npm](https://www.npmjs.com/). 앞으로 우리가 사용해야 할 Framework인 Svelte도 등록되어 있음을 볼수 있다.
 -->
+
+## *How to use npm*
+
+#### *Initialize a Project*
+
+To start using npm in your project, you first need to create a `package.json` file. This file holds metadata about the project and its dependencies.
+
+- `npm init`    
+	if you want to quickly generate one with default settings: `npm init -y`
+
+```bash
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm init
+This utility will walk you through creating a package.json file.
+It only covers the most common items, and tries to guess sensible defaults.
+
+See `npm help init` for definitive documentation on these fields
+and exactly what they do.
+
+Use `npm install <pkg>` afterwards to install a package and
+save it as a dependency in the package.json file.
+
+Press ^C at any time to quit.
+package name: (01.npm-study)
+version: (1.0.0)
+description:
+entry point: (index.js)
+test command:
+git repository:
+license: (ISC)
+About to write to D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study\package.json:
+
+{
+  "name": "01.npm-study",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
+}
+
+
+Is this OK? (yes) yes
+
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study>
+```
+
+After running `npm init`, you’ll have a structure like:
+
+```bash
+my-project/
+└── package.json
+```
+
+```bash
+# package.json
+
+{
+  "name": "01.npm-study",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
+}
+```
+
+#### *Install Packages*
+
+If you install packages, a `node_modules` folder and `package-lock.json` will also appear.
+Let's install a package using the following command:
+
+- `npm install <package-name> --verbose` # To see detailed logs during install: --verbose
+
+```bash
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm install lodash
+added 1 package, and audited 2 packages in 1s
+found 0 vulnerabilities
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study>
+```
+
+After running `npm install <package-name>`, you’ll have a structure like:
+
+```
+my-project/
+├── node_modules/
+├── package.json
+└── package-lock.json
+```
+
+```bash
+# package.json
+
+{
+  "name": "01.npm-study",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1" # command: `npm run test`
+  },
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
+}
+```
+
+```bash
+# package-lock.json
+
+{
+  "name": "01.npm-study",
+  "version": "1.0.0",
+  "lockfileVersion": 3,
+  "requires": true,
+  "packages": {
+    "": {
+      "name": "01.npm-study",
+      "version": "1.0.0",
+      "license": "ISC",
+      "dependencies": {
+        "lodash": "^4.17.21"
+      }
+    },
+    "node_modules/lodash": {
+      "version": "4.17.21",
+      "resolved": "https://registry.npmjs.org/lodash/-/lodash-4.17.21.tgz",
+      "integrity": "sha512-v2kDEe57lecTulaDIuNTPy3Ry4gLGJ6Z1O3vE1krgXZNrsQ+LFTGHVxVjcXPs17LhbZVGedAJv8XZ1tvj5FvSg==",
+      "license": "MIT"
+    }
+  }
+}
+```
+
+If you clone someone else's project that includes a `package.json`, you can install all required packages with:
+
+- `npm install --verbose`  # To see detailed logs during install: --verbose
+
+#### *Running Scripts*
+
+You can define and run custom scripts in `package.json`:
+
+```bash
+# package.json
+
+"scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1" # command: `npm run test`
+  "dev": "dir" # Add it manually, When you run `npm run dev`, the `dir` command will be executed.
+}
+```
+
+```bash
+S D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm run test 
+> 01.npm-study@1.0.0 test
+> echo "Error: no test specified" && exit 1
+"Error: no test specified" 
+
+
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm run dev 
+> 01.npm-study@1.0.0 dev
+> dir
+ D 드라이브의 볼륨: AIResearcher
+ 볼륨 일련 번호: D22F-F334
+ D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study 디렉터리
+2025-04-04  오후 04:59    <DIR>          .
+2025-04-04  오후 04:59    <DIR>          ..
+2025-04-04  오후 04:59    <DIR>          node_modules
+2025-04-04  오후 04:59               554 package-lock.json    
+2025-04-04  오후 05:12               276 package.json
+               2개 파일                 830 바이트
+               3개 디렉터리  366,700,564,480 바이트 남음
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study>
+```
+
+#### *Uninstall Packages*
+
+To uninstall a package:
+- `npm uninstall <package-name>`
+
+```bash
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm uninstall lodash
+removed 1 package, and audited 1 package in 521ms
+found 0 vulnerabilities
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study>
+```
+
+By looking at the `dependencies` section in `package.json`, you can confirm that the uninstalled `lodash` has been removed.
+
+```bash
+{
+  "name": "01.npm-study",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "dir"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
+}
+```
