--- a/_posts/frontend/svelte/2025-03-26-Svelte3.md
+++ b/_posts/frontend/svelte/2025-03-26-Svelte3.md
@@ -286,6 +286,89 @@ export default app
 </button>
 ```
 
+
+#### *Detailed package.json*
+
+Let's take a closer look at the scripts added to `package.json`.
+
+```jsonc
+// package.json
+
+{
+  "name": "svelte-javascript-vite-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",             // Runs Vite using the command `npm run dev`
+    "build": "vite build",     // Builds the project for production deployment
+    "preview": "vite preview"  // Serves the built project locally for testing
+  },
+  "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "svelte": "^5.20.2",
+    "vite": "^6.2.0"
+  }
+}
+```
+
+- `npm run dev` — Runs a local development server
+	- Instant feedback during development
+	- No bundling → very fast
+	- Source maps enabled for easy debugging
+	- Not optimized for production
+    
+- `npm run build` — Generates an optimized and minified version of your app
+	- Minifies and bundles JS/CSS
+	- Produces a **`dist/`** folder with deployable files
+	- Slower than dev mode, but optimized
+	- optional Step: Test with a Local HTTP Server    
+		`npm install -g serve`    
+		`serve dist`  
+
+```bash
+# What’s Inside the `dist/` Folder? 
+# All assets are **minified**, optimized, and ready to deploy.
+
+dist/
+├── index.html
+├── assets/
+│   ├── index-BcGE2Ypm.js
+│   ├── index-Ugp4xLko.css
+```
+	
+```bash
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\03.svelte-vite-javascrit-project> npm install -g serve
+added 88 packages in 3s
+24 packages are looking for funding
+  run `npm fund` for details
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\03.svelte-vite-javascrit-project> serve dist
+   ┌─────────────────────────────────────────────┐
+   │                                             │
+   │   Serving!                                  │
+   │                                             │
+   │   - Local:    http://localhost:3000         │
+   │   - Network:  http://180.227.217.220:3000   │
+   │                                             │
+   │   Copied local address to clipboard!        │
+   │                                             │
+   └─────────────────────────────────────────────┘
+```
+
+- `npm run preview` — Runs a local server to preview the **production-ready** build
+	- Simulates how your app will behave in production
+	- No live reloading or dev features
+	- Useful for final testing
+
+```bash
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\03.svelte-vite-javascrit-project> npm run preview
+> svelte-vite-javascrit-project@0.0.0 preview
+> vite preview
+  ➜  Local:   http://localhost:4173/
+  ➜  Network: use --host to expose
+  ➜  press h + enter to show help
+```
+
 #### *Install Svelte for VS Code*
 
 **Svelte for VS Code** is an extension that helps you develop more efficiently with the Svelte framework in the Visual Studio Code editor. Let’s install it.
