--- a/_posts/frontend/svelte/2025-03-24-Svelte1.md
+++ b/_posts/frontend/svelte/2025-03-24-Svelte1.md
@@ -1,5 +1,5 @@
 ---
-title: Svelte Study - Day 1
+title: Introduce Svelte, Node.js and npm
 description: Let's install Node.js and npm to use Svelte. 
 author: DS2Man
 date: 2025-03-24 11:00:00 +0000
@@ -23,11 +23,11 @@ _Frontend Framework(Source: [Stateofjs](https://2024.stateofjs.com/en-US/librari
 
 #### *React vs Vue.js vs Svelte*
 
-|Framework|Features|
-|---|---|
-|**[React](https://react.dev/)**|The most widely adopted framework, known for its power and flexibility.<br>Supports a vast ecosystem of libraries and tools. <br>However, it comes with a relatively steep learning curve.|
-|**[Vue.js](https://vuejs.org/)**|Easy to learn and beginner-friendly. <br>Offers component-based development, making it easier to organize and manage code strategically.|
-|**[Svelte](https://svelte.dev/)**|A fast and lightweight framework. <br>Compiles to highly optimized JavaScript at build time, <br>making it ideal for efficient development with minimal code.|
+| Framework                         | Features                                                                                                                                                                                   |
+| --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| **[React](https://react.dev/)**   | The most widely adopted framework, known for its power and flexibility.<br>Supports a vast ecosystem of libraries and tools. <br>However, it comes with a relatively steep learning curve. |
+| **[Vue.js](https://vuejs.org/)**  | Easy to learn and beginner-friendly. <br>Offers component-based development, making it easier to organize and manage code strategically.                                                   |
+| **[Svelte](https://svelte.dev/)** | A fast and lightweight framework. <br>Compiles to highly optimized JavaScript at build time, <br>making it ideal for efficient development with minimal code.                              |
 
 Each framework has its own strengths. If you want flexibility and community support, React is a solid choice. If you prefer simplicity and ease of use, Vue.js is worth considering. And if you're looking for high performance with minimal complexity, Svelte might be the perfect fit.
 
