--- a/_posts/frontend/svelte/2025-03-25-Svelte2.md
+++ b/_posts/frontend/svelte/2025-03-25-Svelte2.md
@@ -1,5 +1,5 @@
 ---
-title: Svelte Study - Day 2
+title: How to use npm
 description: Let's use npm. 
 author: DS2Man
 date: 2025-03-25 11:00:00 +0000
@@ -9,9 +9,7 @@ math: true
 pin: true
 ---
   
-## *How to use npm*
-
-#### *Initialize a Project*
+## *Initialize a Project*
 
 To start using npm in your project, you first need to create a `package.json` file. This file holds metadata about the project and its dependencies.
 
@@ -80,12 +78,13 @@ my-project/
 }
 ```
 
-#### *Install Packages*
+## *Install Packages*
 
 If you install packages, a `node_modules` folder and `package-lock.json` will also appear.
 Let's install a package using the following command:
 
-- `npm install <package-name> --verbose` # To see detailed logs during install: --verbose
+- `npm install <package-name> --verbose`    
+	-  To see detailed logs during install: --verbose
 
 ```bash
 PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm install lodash
@@ -98,9 +97,9 @@ After running `npm install <package-name>`, you’ll have a structure like:
 
 ```
 my-project/
-├── node_modules/
+├── node_modules/      # Adding
 ├── package.json
-└── package-lock.json
+└── package-lock.json  # Adding
 ```
 
 ```bash
@@ -115,9 +114,9 @@ my-project/
   },
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "",      # Adding
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21"  # Adding
   }
 }
 ```
@@ -151,9 +150,9 @@ my-project/
 
 If you clone someone else's project that includes a `package.json`, you can install all required packages with:
 
-- `npm install --verbose`  # To see detailed logs during install: --verbose
+- `npm install --verbose`
 
-#### *Running Scripts*
+## *Running Scripts*
 
 You can define and run custom scripts in `package.json`:
 
@@ -189,7 +188,7 @@ PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm run dev
 PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study>
 ```
 
-#### *Uninstall Packages*
+## *Uninstall Packages*
 
 To uninstall a package:
 - `npm uninstall <package-name>`
