--- a/_posts/frontend/svelte/2025-03-26-Svelte3.md
+++ b/_posts/frontend/svelte/2025-03-26-Svelte3.md
@@ -1,5 +1,5 @@
 ---
-title: Svelte Study - Day 3
+title: Creating a project with svelte
 description: Let's learn the svelte framework.
 author: DS2Man
 date: 2025-03-26 11:00:00 +0000
