--- a/_posts/frontend/svelte/2025-03-28-Svelte5.md
+++ b/_posts/frontend/svelte/2025-03-28-Svelte5.md
@@ -1,5 +1,5 @@
 ---
-title: Svelte Study - Day 5
+title: Components, Store with svelte.
 description: Let's learn the basic syntax of svelte.
 author: DS2Man
 date: 2025-03-28 11:00:00 +0000
