--- a/_posts/frontend/svelte/2025-03-26-Svelte3-Add.md
+++ b/_posts/frontend/svelte/2025-03-26-Svelte3-Add.md
@@ -1,5 +1,5 @@
 ---
-title: Svelte Study - Day 3-Add
+title: Set up a Svelte project and Run Container.
 description: Let's create project & Docker Build
 author: DS2Man
 date: 2025-03-26 17:00:00 +0000
