--- a/_posts/frontend/svelte/2025-03-27-Svelte4.md
+++ b/_posts/frontend/svelte/2025-03-27-Svelte4.md
@@ -1,5 +1,5 @@
 ---
-title: Svelte Study - Day 4
+title: Import, Binding, Events, and More with svelte.
 description: Let's learn the basic syntax of svelte.
 author: DS2Man
 date: 2025-03-27 11:00:00 +0000
