--- a/_posts/frontend/svelte/2025-03-29-Svelte6.md
+++ b/_posts/frontend/svelte/2025-03-29-Svelte6.md
@@ -1,5 +1,5 @@
 ---
-title: Svelte Study - Day 6
+title: A Simple Project to Practice Svelte
 description: Let's implement a simple project.
 author: DS2Man
 date: 2025-03-29 11:00:00 +0000
@@ -9,10 +9,12 @@ math: true
 pin: true
 ---
 
-## *Create Project*
+## *Practicing with Svelte*
 
-![Project](/assets/img/svelte/2025-03-29-SVELTE6_1.gif)
-_Project_
+I made a simple website to search for movie information.    
+Since it's based on what I learned over the past week, there are still a lot of things lacking. I'm not sure if I'll have the chance, but I'll try to improve it little by little whenever I can.
 
+- [Project1 with Svelte](https://github.com/jaoneol/Frontend/tree/main/Svelte/pjt01-movieinfo)
 
-git으로 올리자.!!!!!!!!!!
+![Project1](/assets/img/svelte/2025-03-29-SVELTE6_1.gif)
+_Project1 Review_
