--- a/_posts/mylife/2025-04-05-MyOpinion-2025.md
+++ b/_posts/mylife/2025-04-05-MyOpinion-2025.md
@@ -1,6 +1,5 @@
 ---
-title: 숨가쁘게 달려온 2025년 1Q
-description: 
+title: The first quarter of 2025 — The beginning of a whirlwind 
 author: DS2Man
 date: 2025-04-05 11:00:00 +0000
 categories: [Mylife, Opinion]
