--- a/_posts/mylife/2025-04-04-MyOpinion-2025-1Q-KOR.md
+++ b/_posts/mylife/2025-04-04-MyOpinion-2025-1Q-KOR.md
@@ -25,7 +25,7 @@ GitHub Pages를 활용해 블로그를 만들었고, Ruby와 Jekyll 설치부터
 
 잔디를 열심히 심은 건… 그냥 덤일 뿐이다. 😅
 
-- ![GitHub Contributions](/assets/img/mylife/2025/2025-04-04-MyOpinion_1.png)
+![GitHub Contributions](/assets/img/mylife/2025/2025-04-04-MyOpinion_1.png)
 _GitHub Contributions_
 
 #### *LLM & RAG*
