--- a/_posts/mylife/2025-04-04-MyOpinion-2025-1Q.md
+++ b/_posts/mylife/2025-04-04-MyOpinion-2025-1Q.md
@@ -25,7 +25,7 @@ As of April 5, 2025, I’ve written **52 posts in just three months**. I only sl
 
 Planting green grass on GitHub… well, that was just a fun bonus. 😅
 
-- ![GitHub Contributions Graph](/assets/img/mylife/2025/2025-04-04-MyOpinion_1.png)
+![GitHub Contributions Graph](/assets/img/mylife/2025/2025-04-04-MyOpinion_1.png)
 _GitHub Contributions Graph_
 
 #### *LLM & RAG*
